--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@types/react-redux": "^7.1.16",
     "@types/uuid": "^8.3.0",
     "gh-pages": "^3.1.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "typescript": "~3.7.2",
+    "typescript": "~4.2.4",
     "uuid": "^8.3.2"
   },
   "scripts": {
@@ -30,7 +30,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public",
+    "jest:integration": "jest -c integration/jest.config.js",
+    "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration",
+    "update:integration": "yarn run jest:integration --updateSnapshot"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,5 +51,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "^6.2.8",
+    "@storybook/addon-essentials": "^6.2.8",
+    "@storybook/addon-links": "^6.2.8",
+    "@storybook/node-logger": "^6.2.8",
+    "@storybook/preset-create-react-app": "^3.1.7",
+    "@storybook/react": "6.2.8",
+    "jest-image-snapshot": "^4.4.1",
+    "jest-puppeteer": "^5.0.1",
+    "puppeteer": "^9.0.0",
+    "start-server-and-test": "^1.12.1"
   }
 }
